Convert auditor to use baseline
- Use latest version of baseline across services

Change-Id: Ic1704e9ce45ad1733cd9ddd4cc7aed70b741da2c